--- a/detalle-sesion.html
+++ b/detalle-sesion.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Oscar Club. Clubs virtuales de cine para los amantes del cine"/>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/favicon.ico">
 </head>
 <body>
     <header id="cabecera">
