--- a/detalle-sesion.html
+++ b/detalle-sesion.html
@@ -96,7 +96,7 @@
                 </p>
                 <h2>Trailer</h2>
                 <div class="contenedor_video" >
-                    <iframe  src="https://www.youtube.com/embed/taE3PwurhYM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe  src="https://www.youtube.com/embed/taE3PwurhYM"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div id="pie_video">
                     <p class="detalle_primeraletra">KLAUS</p> | <p class="detalle_primeraletra">OFFICIAL TRAILER</p> | <p class="detalle_primeraletra">NETFLIX</p>
